--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sync-meete-user-web-v2": "cd ~ && rm -rf Meete/user-web-v2/modules && cp -rf Simbox/core/src/modules Meete/user-web-v2",
+    "sync-w": "nodemon --watch './src' -e 'ts,tsx,scss' --exec 'yarn sync'",
+    "sync": "yarn sync-meete-user-web-v2"
   },
   "eslintConfig": {
     "extends": "react-app"
