--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "axios": "^0.19.1",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "formik": "^2.1.2",
-    "react": "^16.12.0",
+    "formik": "^2.1.4",
+    "react": "^16.13.0",
     "react-datetime-picker": "^2.9.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.0",
     "react-dropzone": "^10.2.1",
-    "react-easy-crop": "^2.0.0",
-    "react-number-format": "^4.3.1",
+    "react-easy-crop": "^2.1.0",
+    "react-number-format": "^4.4.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "react-select": "^3.0.8",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
@@ -26,7 +26,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.25.0",
     "typescript": "~3.7.2",
-    "yup": "^0.28.0"
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "@types/faker": "^4.1.9",
@@ -45,7 +45,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sync-meete-user-web-v2": "cd ~ && rm -rf Meete/user-web-v2/src/modules && cp -rf Simbox/core/src/modules Meete/user-web-v2/src/",
+    "sync-meete-user-web-v2": "cd ~ && rm -rf Meete/user-web/src/modules && cp -rf Simbox/core/src/modules Meete/user-web/src/",
     "sync-baloo-web-internal": "cd ~ && rm -rf Baloo/baloo-web-internal/src/modules && cp -rf Simbox/core/src/modules Baloo/baloo-web-internal/src/",
     "sync-w": "nodemon --watch './src' -e 'ts,tsx,scss' --exec 'yarn sync'",
     "sync": "yarn sync-meete-user-web-v2 && yarn sync-baloo-web-internal"
