--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "sync-baloo-web-internal": "cd ~ && rm -rf Baloo/baloo-web-internal/src/modules && cp -rf Simbox/core/src/modules Baloo/baloo-web-internal/src/",
     "sync-royalty-web-internal": "cd ~ && rm -rf Yolo/web-internal/src/modules && cp -rf Simbox/core/src/modules Yolo/web-internal/src/",
     "sync-w": "nodemon --watch './src' -e 'ts,tsx,scss' --exec 'yarn sync'",
-    "sync": "yarn sync-meete-user-web-v2 && yarn sync-baloo-web-internal && yarn sync-royalty-web-internal"
+    "sync": "yarn sync-royalty-web-internal"
   },
   "eslintConfig": {
     "extends": "react-app"
